add_library(minecpp_game rules.cpp level/level.cpp chunk/chunk.cpp level/dimension.h items/recipe.cpp items/item.cpp items/registry.cpp items/registry.h chunk/section.cpp chunk/netchunk.cpp chunk/utils.cpp blocks/block.cpp blocks/block.h blocks/state.h blocks/state.cpp direction.h blocks/bed.h blocks/chest.h blocks/comparator.h blocks/door.h blocks/note_block.h blocks/piston.h blocks/slab.h blocks/stairs.h blocks/structure.h blocks/bamboo.h blocks/registry.cpp blocks/color.h blocks/material.h blocks/sapling.h blocks/registry.h blocks/material.cpp blocks/block.cpp blocks/color.cpp player_data.cpp player_data.h inventory.h inventory.cpp entities/entity.cpp entities/entity.h dimension.h player.cpp player.h recipe_book.cpp recipe_book.h difficulty.h dimension.cpp hand.h blocks/position.cpp blocks/position.h events.h)
target_link_libraries(minecpp_game LINK_PUBLIC minecpp_utils minecpp_nbt)
