add_library(minecpp_game rules.cpp level/level.cpp item/recipe.cpp item/item.cpp item/registry.cpp chunk/chunk.cpp chunk/utils.cpp block/block.cpp block/state.cpp block/registry.cpp block/material.cpp block/block.cpp block/color.cpp player_data.cpp inventory.cpp entity/entity.cpp player.cpp recipe_book.cpp dimension.cpp block/position.cpp tracking.cpp world.cpp worldgen/terrain/terrain.cpp chunk/section.cpp worldgen/terrain/height.cpp worldgen/population/object.cpp worldgen/population/population.cpp worldgen/population/chunk.cpp pnbt/chunk.cpp worldgen/generator.cpp)
target_link_libraries(minecpp_game LINK_PUBLIC minecpp_utils minecpp_nbt minecpp_error minecpp_squeeze spdlog grpc++)
