add_library(minecpp_game rules.cpp level/level.cpp items/recipe.cpp items/item.cpp items/registry.cpp chunk/chunk.cpp chunk/utils.cpp blocks/block.cpp blocks/state.cpp blocks/registry.cpp blocks/material.cpp blocks/block.cpp blocks/color.cpp player_data.cpp inventory.cpp entities/entity.cpp player.cpp recipe_book.cpp dimension.cpp blocks/position.cpp tracking.cpp world.cpp worldgen/terrain/terrain.cpp chunk/section.cpp worldgen/terrain/height.cpp worldgen/population/object.cpp worldgen/population/population.cpp worldgen/population/chunk.cpp pnbt/chunk.cpp worldgen/generator.cpp)
target_link_libraries(minecpp_game LINK_PUBLIC minecpp_utils minecpp_nbt minecpp_error minecpp_squeeze spdlog grpc++)
